bisonc++ (2.4.8)

  * Recompilation using option --std=c++0x, required because of Bobcat's use
    of C++0x syntax.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 05 Sep 2009 17:25:56 +0200

bisonc++ (2.4.7)

  * Streams processed by an `#include' directive were not properly closed, 
    resulting in a memory leak. The Scanner's code was modified to plug that
    leak. 

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 06 May 2009 09:36:02 +0200

bisonc++ (2.4.6)

  * Changed the build script to allow finer control over construction and
    installation of parts of the package

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 24 Mar 2009 19:16:10 +0100

bisonc++ (2.4.5)

  * DateTime (generator/filter.cc) adapted due to change of Bobcat's DateTime 
    interface

bisonc++ (2.4.4)

  * typed terminal tokens (as used in, e.g., %type<fieldname>) were not
    included in the parserbase's Tokens__ enum since their symbol type is left
    at UNDETERMINED. tokens used in type lists can also be non-terminals, in
    which case their symbol type is changed accordingly. In 2.4.4. a symbol is
    selected for inclusion in the Tokens__ enum if it's a terminal token but
    also if it's a symbol that has been used in the grammar although its 
    symbol type is left at UNDETERMINED (in generator/selectsymbolic.cc)

bisonc++ (2.4.3)

  * repaired segfault generated when the name of a non-existing file was
    passed to bisonc++

bisonc++ (2.4.2)

  * scanner/yylex.cc removed from the distribution: flex will create a new
    Scanner::yylex() member at each new distribution to prevent 
    incompatibilities between earlier yylex.cc and later FlexLexer.h files.

bisonc++ (2.4.1) 

  * Implemented minor changes related to requirements imposed upon the code by
    g++ 4.3.

  * Generator/filter now uses the Datetime::rfc2822(), implmented since Bobcat
    1.17.1 

bisonc++ (2.4.0) 

  * Fixed missing entry in multiple reduction state tables:
