@@ -1,2 +1,2 @@
-#define VERSION "2.4.8"
-#define YEARS   "2005-2009"
+#define VERSION "2.4.9"
+#define YEARS   "2005-2010"
