@@ -1,3 +1,5 @@
+// Generated by Bisonc++ V2.4.9 on Sun, 14 Feb 2010 17:10:38 +0100
+
 // $insert class.ih
 #include "parser.ih"
 
@@ -24,6 +26,7 @@
 // proper continuation, new tokens are obtained by nextToken(). If such a
 // token is found, error recovery is successful and the token is
 // handled according to the error state's SR table and parsing continues.
+// During error recovery semantic actions are ignored.
 
 // A state flagged with the DEF_RED flag will perform a default
 // reduction if no other continuations are available for the current token.
@@ -219,7 +222,6 @@ SR__ s_0[] =
     { {     299}, {   1} }, // input     
     { {     300}, {   2} }, // directives
     { {       0}, { -43} },              
-
 };
 
 SR__ s_1[] =
@@ -227,7 +229,6 @@ SR__ s_1[] =
     { { REQ_TOKEN}, {            2} }, 
     { {     _EOF_}, { PARSE_ACCEPT} }, 
     { {         0}, {            0} }, 
-
 };
 
 SR__ s_2[] =
@@ -286,7 +287,6 @@ SR__ s_2[] =
     { {     289}, { 53} }, // TYPE                   
     { {     290}, { 54} }, // UNION                  
     { {       0}, {  0} },                           
-
 };
 
 SR__ s_3[] =
@@ -294,28 +294,24 @@ SR__ s_3[] =
     { { DEF_RED}, {   2} },         
     { {     302}, {  55} }, // rules
     { {       0}, { -78} },         
-
 };
 
 SR__ s_4[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -42} }, 
-
 };
 
 SR__ s_5[] =
 {
     { { DEF_RED}, {  1} }, 
     { {       0}, { -2} }, 
-
 };
 
 SR__ s_6[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -44} }, 
-
 };
 
 SR__ s_7[] =
@@ -326,7 +322,6 @@ SR__ s_7[] =
     { {       285}, { 58} }, // STRING    
     { {       291}, { 59} }, // XSTRING   
     { {         0}, {  0} },              
-
 };
 
 SR__ s_8[] =
@@ -337,7 +332,6 @@ SR__ s_8[] =
     { {       285}, { 58} }, // STRING    
     { {       291}, { 59} }, // XSTRING   
     { {         0}, {  0} },              
-
 };
 
 SR__ s_9[] =
@@ -348,7 +342,6 @@ SR__ s_9[] =
     { {       285}, { 58} }, // STRING    
     { {       291}, { 59} }, // XSTRING   
     { {         0}, {  0} },              
-
 };
 
 SR__ s_10[] =
@@ -356,21 +349,18 @@ SR__ s_10[] =
     { { REQ_TOKEN}, {  2} },              
     { {       266}, { 62} }, // IDENTIFIER
     { {         0}, {  0} },              
-
 };
 
 SR__ s_11[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -49} }, 
-
 };
 
 SR__ s_12[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -50} }, 
-
 };
 
 SR__ s_13[] =
@@ -378,7 +368,6 @@ SR__ s_13[] =
     { { REQ_TOKEN}, {  2} },          
     { {       276}, { 63} }, // NUMBER
     { {         0}, {  0} },          
-
 };
 
 SR__ s_14[] =
@@ -389,7 +378,6 @@ SR__ s_14[] =
     { {       285}, { 58} }, // STRING    
     { {       291}, { 59} }, // XSTRING   
     { {         0}, {  0} },              
-
 };
 
 SR__ s_15[] =
@@ -400,7 +388,6 @@ SR__ s_15[] =
     { {       285}, { 58} }, // STRING    
     { {       291}, { 59} }, // XSTRING   
     { {         0}, {  0} },              
-
 };
 
 SR__ s_16[] =
@@ -408,14 +395,12 @@ SR__ s_16[] =
     { { DEF_RED}, {   2} },                         
     { {     334}, {  66} }, // d_incrementPrecedence
     { {       0}, { -40} },                         
-
 };
 
 SR__ s_17[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -55} }, 
-
 };
 
 SR__ s_18[] =
@@ -423,14 +408,12 @@ SR__ s_18[] =
     { { REQ_TOKEN}, {  2} },         
     { {       259}, { 67} }, // BLOCK
     { {         0}, {  0} },         
-
 };
 
 SR__ s_19[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -57} }, 
-
 };
 
 SR__ s_20[] =
@@ -438,7 +421,6 @@ SR__ s_20[] =
     { { REQ_TOKEN}, {  2} },           
     { {       291}, { 68} }, // XSTRING
     { {         0}, {  0} },           
-
 };
 
 SR__ s_21[] =
@@ -446,14 +428,12 @@ SR__ s_21[] =
     { { REQ_TOKEN}, {  2} },              
     { {       266}, { 69} }, // IDENTIFIER
     { {         0}, {  0} },              
-
 };
 
 SR__ s_22[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -60} }, 
-
 };
 
 SR__ s_23[] =
@@ -461,7 +441,6 @@ SR__ s_23[] =
     { { DEF_RED}, {   2} },                         
     { {     334}, {  70} }, // d_incrementPrecedence
     { {       0}, { -40} },                         
-
 };
 
 SR__ s_24[] =
@@ -472,7 +451,6 @@ SR__ s_24[] =
     { {       285}, { 58} }, // STRING    
     { {       291}, { 59} }, // XSTRING   
     { {         0}, {  0} },              
-
 };
 
 SR__ s_25[] =
@@ -480,7 +458,6 @@ SR__ s_25[] =
     { { REQ_TOKEN}, {  2} },          
     { {       276}, { 72} }, // NUMBER
     { {         0}, {  0} },          
-
 };
 
 SR__ s_26[] =
@@ -488,7 +465,6 @@ SR__ s_26[] =
     { { DEF_RED}, {   2} },                         
     { {     334}, {  73} }, // d_incrementPrecedence
     { {       0}, { -40} },                         
-
 };
 
 SR__ s_27[] =
@@ -499,7 +475,6 @@ SR__ s_27[] =
     { {       285}, { 58} }, // STRING    
     { {       291}, { 59} }, // XSTRING   
     { {         0}, {  0} },              
-
 };
 
 SR__ s_28[] =
@@ -507,7 +482,6 @@ SR__ s_28[] =
     { { REQ_TOKEN}, {  2} },              
     { {       266}, { 75} }, // IDENTIFIER
     { {         0}, {  0} },              
-
 };
 
 SR__ s_29[] =
@@ -515,7 +489,6 @@ SR__ s_29[] =
     { { REQ_TOKEN}, {  2} },           
     { {       291}, { 76} }, // XSTRING
     { {         0}, {  0} },           
-
 };
 
 SR__ s_30[] =
@@ -526,7 +499,6 @@ SR__ s_30[] =
     { {     320}, {  79} }, // token_m    
     { {      60}, {  80} }, // '<'        
     { {       0}, { -19} },               
-
 };
 
 SR__ s_31[] =
@@ -535,7 +507,6 @@ SR__ s_31[] =
     { {       332}, { 81} }, // typename_a
     { {        60}, { 80} }, // '<'       
     { {         0}, {  0} },              
-
 };
 
 SR__ s_32[] =
@@ -543,63 +514,54 @@ SR__ s_32[] =
     { { REQ_TOKEN}, {  2} },         
     { {       259}, { 82} }, // BLOCK
     { {         0}, {  0} },         
-
 };
 
 SR__ s_33[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -71} }, 
-
 };
 
 SR__ s_34[] =
 {
     { { DEF_RED}, {  1} }, 
     { {       0}, { -3} }, 
-
 };
 
 SR__ s_35[] =
 {
     { { DEF_RED}, {  1} }, 
     { {       0}, { -4} }, 
-
 };
 
 SR__ s_36[] =
 {
     { { DEF_RED}, {  1} }, 
     { {       0}, { -5} }, 
-
 };
 
 SR__ s_37[] =
 {
     { { DEF_RED}, {  1} }, 
     { {       0}, { -6} }, 
-
 };
 
 SR__ s_38[] =
 {
     { { DEF_RED}, {  1} }, 
     { {       0}, { -7} }, 
-
 };
 
 SR__ s_39[] =
 {
     { { DEF_RED}, {  1} }, 
     { {       0}, { -8} }, 
-
 };
 
 SR__ s_40[] =
 {
     { { DEF_RED}, {  1} }, 
     { {       0}, { -9} }, 
-
 };
 
 SR__ s_41[] =
@@ -607,28 +569,24 @@ SR__ s_41[] =
     { { DEF_RED}, {   2} },                
     { {     321}, {  83} }, // typesymbol_m
     { {       0}, { -20} },                
-
 };
 
 SR__ s_42[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -10} }, 
-
 };
 
 SR__ s_43[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -11} }, 
-
 };
 
 SR__ s_44[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -12} }, 
-
 };
 
 SR__ s_45[] =
@@ -636,21 +594,18 @@ SR__ s_45[] =
     { { DEF_RED}, {   2} },                
     { {     321}, {  84} }, // typesymbol_m
     { {       0}, { -20} },                
-
 };
 
 SR__ s_46[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -13} }, 
-
 };
 
 SR__ s_47[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -14} }, 
-
 };
 
 SR__ s_48[] =
@@ -658,28 +613,24 @@ SR__ s_48[] =
     { { DEF_RED}, {   2} },                
     { {     321}, {  85} }, // typesymbol_m
     { {       0}, { -20} },                
-
 };
 
 SR__ s_49[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -15} }, 
-
 };
 
 SR__ s_50[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -16} }, 
-
 };
 
 SR__ s_51[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -17} }, 
-
 };
 
 SR__ s_52[] =
@@ -687,21 +638,18 @@ SR__ s_52[] =
     { { DEF_RED}, {   2} },                
     { {     321}, {  86} }, // typesymbol_m
     { {       0}, { -20} },                
-
 };
 
 SR__ s_53[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -21} }, 
-
 };
 
 SR__ s_54[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -22} }, 
-
 };
 
 SR__ s_55[] =
@@ -714,77 +662,66 @@ SR__ s_55[] =
     { {     349}, {  91} }, // identifier_a   
     { {     266}, {  92} }, // IDENTIFIER     
     { {       0}, { -36} },                   
-
 };
 
 SR__ s_56[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -45} }, 
-
 };
 
 SR__ s_57[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -37} }, 
-
 };
 
 SR__ s_58[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -38} }, 
-
 };
 
 SR__ s_59[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -39} }, 
-
 };
 
 SR__ s_60[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -46} }, 
-
 };
 
 SR__ s_61[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -47} }, 
-
 };
 
 SR__ s_62[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -48} }, 
-
 };
 
 SR__ s_63[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -51} }, 
-
 };
 
 SR__ s_64[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -52} }, 
-
 };
 
 SR__ s_65[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -53} }, 
-
 };
 
 SR__ s_66[] =
@@ -795,7 +732,6 @@ SR__ s_66[] =
     { {     320}, {  79} }, // token_m    
     { {      60}, {  80} }, // '<'        
     { {       0}, { -19} },               
-
 };
 
 SR__ s_67[] =
@@ -804,21 +740,18 @@ SR__ s_67[] =
     { {     330}, {  94} }, // optSemiCol
     { {      59}, {  95} }, // ';'       
     { {       0}, { -32} },              
-
 };
 
 SR__ s_68[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -58} }, 
-
 };
 
 SR__ s_69[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -59} }, 
-
 };
 
 SR__ s_70[] =
@@ -829,21 +762,18 @@ SR__ s_70[] =
     { {     320}, {  79} }, // token_m    
     { {      60}, {  80} }, // '<'        
     { {       0}, { -19} },               
-
 };
 
 SR__ s_71[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -62} }, 
-
 };
 
 SR__ s_72[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -63} }, 
-
 };
 
 SR__ s_73[] =
@@ -854,28 +784,24 @@ SR__ s_73[] =
     { {     320}, {  79} }, // token_m    
     { {      60}, {  80} }, // '<'        
     { {       0}, { -19} },               
-
 };
 
 SR__ s_74[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -65} }, 
-
 };
 
 SR__ s_75[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -66} }, 
-
 };
 
 SR__ s_76[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -67} }, 
-
 };
 
 SR__ s_77[] =
@@ -883,7 +809,6 @@ SR__ s_77[] =
     { { DEF_RED}, {   2} },                    
     { {     335}, {  98} }, // d_pushPrecedence
     { {       0}, { -41} },                    
-
 };
 
 SR__ s_78[] =
@@ -891,14 +816,12 @@ SR__ s_78[] =
     { { DEF_RED}, {   2} },           
     { {     320}, {  99} }, // token_m
     { {       0}, { -19} },           
-
 };
 
 SR__ s_79[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -34} }, 
-
 };
 
 SR__ s_80[] =
@@ -907,7 +830,6 @@ SR__ s_80[] =
     { {       349}, { 100} }, // identifier_a
     { {       266}, {  92} }, // IDENTIFIER  
     { {         0}, {   0} },                
-
 };
 
 SR__ s_81[] =
@@ -916,7 +838,6 @@ SR__ s_81[] =
     { {     338}, { 101} }, // symbols 
     { {     319}, { 102} }, // symbol_m
     { {       0}, { -18} },            
-
 };
 
 SR__ s_82[] =
@@ -925,56 +846,48 @@ SR__ s_82[] =
     { {     330}, { 103} }, // optSemiCol
     { {      59}, {  95} }, // ';'       
     { {       0}, { -32} },              
-
 };
 
 SR__ s_83[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -23} }, 
-
 };
 
 SR__ s_84[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -24} }, 
-
 };
 
 SR__ s_85[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -25} }, 
-
 };
 
 SR__ s_86[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -26} }, 
-
 };
 
 SR__ s_87[] =
 {
     { { DEF_RED}, {  1} }, 
     { {       0}, { -1} }, 
-
 };
 
 SR__ s_88[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -77} }, 
-
 };
 
 SR__ s_89[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -35} }, 
-
 };
 
 SR__ s_90[] =
@@ -989,7 +902,6 @@ SR__ s_90[] =
     { {     259}, { 110} }, // BLOCK             
     { {     278}, { 111} }, // PREC              
     { {       0}, { -87} },                      
-
 };
 
 SR__ s_91[] =
@@ -997,14 +909,12 @@ SR__ s_91[] =
     { { REQ_TOKEN}, {   2} },       
     { {        58}, { 112} }, // ':'
     { {         0}, {   0} },       
-
 };
 
 SR__ s_92[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -94} }, 
-
 };
 
 SR__ s_93[] =
@@ -1013,21 +923,18 @@ SR__ s_93[] =
     { {     338}, { 113} }, // symbols 
     { {     319}, { 102} }, // symbol_m
     { {       0}, { -18} },            
-
 };
 
 SR__ s_94[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -56} }, 
-
 };
 
 SR__ s_95[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -31} }, 
-
 };
 
 SR__ s_96[] =
@@ -1036,7 +943,6 @@ SR__ s_96[] =
     { {     338}, { 114} }, // symbols 
     { {     319}, { 102} }, // symbol_m
     { {       0}, { -18} },            
-
 };
 
 SR__ s_97[] =
@@ -1045,7 +951,6 @@ SR__ s_97[] =
     { {     338}, { 115} }, // symbols 
     { {     319}, { 102} }, // symbol_m
     { {       0}, { -18} },            
-
 };
 
 SR__ s_98[] =
@@ -1054,14 +959,12 @@ SR__ s_98[] =
     { {     338}, { 116} }, // symbols 
     { {     319}, { 102} }, // symbol_m
     { {       0}, { -18} },            
-
 };
 
 SR__ s_99[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -33} }, 
-
 };
 
 SR__ s_100[] =
@@ -1069,14 +972,12 @@ SR__ s_100[] =
     { { REQ_TOKEN}, {   2} },       
     { {        62}, { 117} }, // '>'
     { {         0}, {   0} },       
-
 };
 
 SR__ s_101[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -69} }, 
-
 };
 
 SR__ s_102[] =
@@ -1088,14 +989,12 @@ SR__ s_102[] =
     { {       349}, { 121} }, // identifier_a
     { {       266}, {  92} }, // IDENTIFIER  
     { {         0}, {   0} },                
-
 };
 
 SR__ s_103[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -70} }, 
-
 };
 
 SR__ s_104[] =
@@ -1105,14 +1004,12 @@ SR__ s_104[] =
     { {       345}, { 123} }, // productionSeparator
     { {       124}, { 124} }, // '|'                
     { {         0}, {   0} },                       
-
 };
 
 SR__ s_105[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -84} }, 
-
 };
 
 SR__ s_106[] =
@@ -1124,35 +1021,30 @@ SR__ s_106[] =
     { {     259}, { 110} }, // BLOCK            
     { {     278}, { 111} }, // PREC             
     { {       0}, { -86} },                     
-
 };
 
 SR__ s_107[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -89} }, 
-
 };
 
 SR__ s_108[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -90} }, 
-
 };
 
 SR__ s_109[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -91} }, 
-
 };
 
 SR__ s_110[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -92} }, 
-
 };
 
 SR__ s_111[] =
@@ -1162,49 +1054,42 @@ SR__ s_111[] =
     { {       266}, { 127} }, // IDENTIFIER
     { {       280}, { 128} }, // QUOTE     
     { {         0}, {   0} },              
-
 };
 
 SR__ s_112[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -80} }, 
-
 };
 
 SR__ s_113[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -54} }, 
-
 };
 
 SR__ s_114[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -61} }, 
-
 };
 
 SR__ s_115[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -64} }, 
-
 };
 
 SR__ s_116[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -68} }, 
-
 };
 
 SR__ s_117[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -95} }, 
-
 };
 
 SR__ s_118[] =
@@ -1243,21 +1128,18 @@ SR__ s_118[] =
     { {     289}, { -32} }, // TYPE                 
     { {     290}, { -32} }, // UNION                
     { {       0}, { -28} },                         
-
 };
 
 SR__ s_119[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -74} }, 
-
 };
 
 SR__ s_120[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -75} }, 
-
 };
 
 SR__ s_121[] =
@@ -1266,14 +1148,12 @@ SR__ s_121[] =
     { {     329}, { 132} }, // optNumber
     { {     276}, { 133} }, // NUMBER   
     { {       0}, { -30} },             
-
 };
 
 SR__ s_122[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -79} }, 
-
 };
 
 SR__ s_123[] =
@@ -1287,49 +1167,42 @@ SR__ s_123[] =
     { {     259}, { 110} }, // BLOCK             
     { {     278}, { 111} }, // PREC              
     { {       0}, { -87} },                      
-
 };
 
 SR__ s_124[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -85} }, 
-
 };
 
 SR__ s_125[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -88} }, 
-
 };
 
 SR__ s_126[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -93} }, 
-
 };
 
 SR__ s_127[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -81} }, 
-
 };
 
 SR__ s_128[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -82} }, 
-
 };
 
 SR__ s_129[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -72} }, 
-
 };
 
 SR__ s_130[] =
@@ -1340,42 +1213,36 @@ SR__ s_130[] =
     { {       349}, { 121} }, // identifier_a
     { {       266}, {  92} }, // IDENTIFIER  
     { {         0}, {   0} },                
-
 };
 
 SR__ s_131[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -27} }, 
-
 };
 
 SR__ s_132[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -76} }, 
-
 };
 
 SR__ s_133[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -29} }, 
-
 };
 
 SR__ s_134[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -83} }, 
-
 };
 
 SR__ s_135[] =
 {
     { { DEF_RED}, {   1} }, 
     { {       0}, { -73} }, 
-
 };
 
 
@@ -1443,12 +1310,17 @@ void ParserBase::push__(size_t state)
 void ParserBase::popToken__()
 {
     d_token__ = d_nextToken__;
+
+    d_val__ = d_nextVal__;
+    d_nextVal__ = STYPE__();
+
     d_nextToken__ = _UNDETERMINED_;
 }
      
 void ParserBase::pushToken__(int token)
 {
     d_nextToken__ = d_token__;
+    d_nextVal__ = d_val__;
     d_token__ = token;
 }
      
@@ -1469,23 +1341,15 @@ inline size_t ParserBase::top__() const
     return d_stateStack__[d_stackIdx__];
 }
 
-inline void ParserBase::checkEOF__() const
-{
-    if (d_token__ == _EOF_)
-    {
-        throw DEFAULT_RECOVERY_MODE__;
-    }
-}
-
-inline void ParserBase::reduce__(PI__ const &pi)
-{
-    pushToken__(pi.d_nonTerm);
-    pop__(pi.d_size);
-
-}
-
 void Parser::executeAction(int production)
 {
+    if (d_token__ != _UNDETERMINED_)
+        pushToken__(d_token__);     // save an already available token
+
+                                    // save default non-nested block $$
+    if (int size = s_productionInfo[production].d_size)
+        d_val__ = d_vsp__[1 - size];
+
     switch (production)
     {
         // $insert actioncases
@@ -1938,6 +1802,13 @@ void Parser::executeAction(int production)
     }
 }
 
+inline void ParserBase::reduce__(PI__ const &pi)
+{
+    d_token__ = pi.d_nonTerm;
+    pop__(pi.d_size);
+
+}
+
 // If d_token__ is _UNDETERMINED_ then if d_nextToken__ is _UNDETERMINED_ another
 // token is obtained from lex(). Then d_nextToken__ is assigned to d_token__.
 void Parser::nextToken()
@@ -2015,58 +1886,76 @@ try
     }
 
 
+    // get the error state
     while (not (s_state[top__()][0].d_type & ERR_ITEM))
     {
         pop__();
     }
 
-        // if on entry here token is already EOF then we've probably been 
-        // here before: _error_ accepts EOF, but the state using
-        // error nevertheless doesn't. In that case parsing terminates 
-    checkEOF__();
+    // In the error state, lookup a token allowing us to proceed.
+    // Continuation may be possible following multiple reductions,
+    // but eventuall a shift will be used, requiring the retrieval of
+    // a terminal token. If a retrieved token doesn't match, the catch below 
+    // will ensure the next token is requested in the while(true) block
+    // implemented below:
 
-    pushToken__(_error_);                     // specify _error_ as next token
-    push__(lookup(true));                     // push the error state
+    int lastToken = d_token__;                  // give the unexpected token a
+                                                // chance to be processed
+                                                // again.
 
-    // In the error state, lookup a token with which we can proceed.
-    // It may be a reduce, but normally a shift is indicated
-    // If a token is seen which doesn't fit, the catch below will catch the
-    // exception thrown by lookup()
+    pushToken__(_error_);                       // specify _error_ as next token
+    push__(lookup(true));                       // push the error state
+
+    d_token__ = lastToken;                      // reactivate the unexpected
+                                                // token (we're now in an
+                                                // ERROR state).
+
+    bool gotToken = true;                       // the next token is a terminal
 
     while (true)
     {
-            // if on entry here token is already EOF then we've probably been 
-            // here before: _error_ accepts EOF, but the state using
-            // error nevertheless doesn't. In that case parsing terminates 
-        checkEOF__();
         try
         {
-            popToken__();
-            nextToken();
-
+            if (s_state[d_state__]->d_type & REQ_TOKEN)
+            {
+                gotToken = d_token__ == _UNDETERMINED_;
+                nextToken();                    // obtain next token
+            }
+            
             int action = lookup(true);
-            popToken__();                   // token processed
 
             if (action > 0)                 // push a new state
             {
                 push__(action);
+                popToken__();
+
+                if (gotToken)
+                {
+
+                    d_acceptedTokens__ = 0;
+                    return;
+                }
             }
             else if (action < 0)
             {
-                executeAction(-action);     // the error's action
-
+                // no actions executed on recovery but save an already 
+                // available token:
+                if (d_token__ != _UNDETERMINED_)
+                    pushToken__(d_token__);
+ 
                                             // next token is the rule's LHS
                 reduce__(s_productionInfo[-action]); 
             }
-            d_acceptedTokens__ = 0;         // reset accept count on error
-            return;
+            else
+                ABORT();                    // abort when accepting during
+                                            // error recovery
         }
         catch (...)
         {
             if (d_token__ == _EOF_)
-                continue;
+                ABORT();                    // saw inappropriate _EOF_
                       
-            popToken__();                   // token processed
+            popToken__();                   // failing token now skipped
         }
     }
 }
