@@ -1,3 +1,5 @@
+// Generated by Bisonc++ V2.4.9 on Sun, 14 Feb 2010 17:10:38 +0100
+
 #ifndef ParserBase_h_included
 #define ParserBase_h_included
 
@@ -93,13 +95,13 @@ union STYPE__
         size_t      d_state__;
         STYPE__    *d_vsp__;
         STYPE__     d_val__;
+        STYPE__     d_nextVal__;
 
         ParserBase();
 
         void ABORT() const;
         void ACCEPT() const;
         void ERROR() const;
-        void checkEOF__() const;
         void clearin();
         bool debug() const;
         void pop__(size_t count = 1);
